@startuml
'https://plantuml.com/sequence-diagram

hide empty members
left to right direction

class ScheduleVaccineStore {
+ validateScheduleVaccine(ScheduleVaccine schd)
+ addScheduleVaccine(ScheduleVaccine schd)
+ createScheduleVaccine(SNSNumber, VaccinationCenter address, date, time slot, typeofvaccine)
}

class UserScheduleVaccineUI{
}

class UserScheduleVaccineController{
+ createScheduleVaccine(SNSNumber, VaccinationCenter address, date, time slot, typeofvaccine)
+ saveSchedule ()
}

class ScheduleVaccine{
-SNSNumber
-VaccinationCenter address
-date
-typeofvaccine
}

class Company {
- designation
+ getSNSUserStore()
}

UserScheduleVaccineUI ..> UserScheduleVaccineController
UserScheduleVaccineController ..> ScheduleVaccine
Company  "1"-->"1"  ScheduleVaccineStore: adopts >
ScheduleVaccineStore "1" --> "*" ScheduleVaccine: stores >

@enduml